--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,12 @@ targets = [ "thumbv7m-none-eabi", "thumbv7em-none-eabihf" ]
 [dependencies]
 embedded-hal = "^ 0.2"
 display-interface = "^ 0.4"
-
-[dependencies.embedded-graphics]
-optional = true
-version = "^ 0.6"
+embedded-graphics-core = { version = "^ 0.3", optional = true }
 
 [dev-dependencies]
 cortex-m = "^ 0.6"
 cortex-m-rt = "^ 0.6"
+embedded-graphics = "^ 0.7"
 panic-semihosting = "^ 0.5"
 display-interface-i2c = "^ 0.4"
 display-interface-spi = "^ 0.4"
@@ -36,7 +34,8 @@ features = [ "rt", "stm32f103" ]
 
 [features]
 default = ["graphics"]
-graphics = ["embedded-graphics"]
+graphics = ["embedded-graphics-core"]
+
 [profile.dev]
 codegen-units = 1
 incremental = false
