fix incorrect `exclude` path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ categories = ["embedded", "no-std"]
 description = "`display-interface` compatible driver for the SSD1309 OLED display controller"
 documentation = "https://docs.rs/ssd1309"
 repository = "https://github.com/antonok-edm/ssd1309"
-exclude = ["readme_banner.jpg", "docs"]
+exclude = ["readme_banner.jpg", "doc"]
 keywords = ["no-std", "ssd1309", "oled", "embedded", "embedded-hal-driver"]
 license = "MIT OR Apache-2.0"
 name = "ssd1309"
